--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/runtime": "*",
         "symfony/security-bundle": "6.1.*",
         "symfony/twig-bundle": "6.1.*",
+        "symfony/validator": "6.1.*",
         "symfony/webpack-encore-bundle": "^1.14",
         "symfony/yaml": "*",
         "twig/extra-bundle": "^2.12|^3.0",
