--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,8 +24,8 @@ services:
         resource: '../src/Core/Controller/'
         tags: ['controller.service_arguments']
 
-    App\Core\Twig\:
-        resource: '../src/Core/Twig/*'
-        arguments: ["@service_container","@twig", "router"]
+    #App\Core\Twig\:
+     #   resource: '../src/Core/Twig/*'
+      #  arguments: ["@service_container","@twig", "router"]
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
