--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,12 @@
         "doctrine/doctrine-bundle": "^2.6",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
+        "knplabs/knp-paginator-bundle": "^5.8",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/cache": "6.1.*",
         "symfony/console": "*",
         "symfony/dotenv": "*",
-        "symfony/flex": "^2",
+        "symfony/flex": "^2.2",
         "symfony/framework-bundle": "*",
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "*",
