--- a/composer.json
+++ b/composer.json
@@ -82,7 +82,12 @@
         }
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^7.1",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "6.1.*",
+        "symfony/css-selector": "6.1.*",
         "symfony/maker-bundle": "^1.43",
+        "symfony/phpunit-bridge": "^6.1",
         "symfony/stopwatch": "6.1.*",
         "symfony/web-profiler-bundle": "6.1.*"
     }
