--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/console": "*",
         "symfony/dotenv": "*",
         "symfony/flex": "^2.2",
+        "symfony/form": "6.1.*",
         "symfony/framework-bundle": "*",
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/runtime": "*",
